# cost-explorer-skills

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
skills/cost-anomaly-investigate/: SKILL.md  investigate.py
skills/cost-explorer-query/: SKILL.md  query.py
skills/finops-recommend/: SKILL.md  __init__.py  recommend.py
tests/: test_integration_merged_features.py  test_investigate.py  test_investigate_query_integration.py  test_query.py  test_recommend.py
